--- a/admin/article_category.html
+++ b/admin/article_category.html
@@ -51,5 +51,29 @@
             </table>
         </div>
     </div>
+    <!-- 导入网络中间层 -->
+    <script src="./libs/http.js"></script>
+    <script id="category_list" type="text./html">
+{{each data v}}
+<tr>
+    <td>{{v.name}}</td>
+    <td>{{v.slug}}</td>
+    <td class="text-center">
+        <a href="javascript:void(0);" data-toggle="modal" class=" btn btn-info btn-xs">编辑</a>
+        <a href="javascript:void(0);" class="btn btn-danger btn-xs">删除</a>
+    </td>
+</tr>
+{{/each}}
+</script>
+    <script>
+        $.ajax({
+            url: BigNew.category_list,
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                $('.table>tbody').html(template('category_list', backData))
+            }
+        })
+    </script>
 
 </html>
