--- a/admin/index.html
+++ b/admin/index.html
@@ -13,8 +13,8 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 导入bootstrap的js文件 -->
     <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
-     <!-- 引入基地址文件 -->
-  <script src="./libs/http.js"></script>
+    <!-- 引入基地址文件 -->
+    <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -27,20 +27,23 @@
         </div>
         <!-- 左侧导航栏 -->
         <div class="menu">
-            <div class="level01 active"><a href="#" target="main_frame"><i
+            <div class="level01 active"><a href="./main_count.html" target="main_frame"><i
                         class="iconfont icon-yidiandiantubiao04"></i><span>首页</span></a></div>
             <div class="level01"><a href="#"><i class="iconfont icon-icon-article"></i><span>文章管理</span><b
                         class="iconfont icon-arrowdownl"></b></a></div>
             <ul class="level02">
-                <li><a href="#" target="main_frame"><i class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
-                <li><a href="#" target="main_frame"><i class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
-                <li><a href="#" target="main_frame"><i class="iconfont icon-previewright"></i><span>文章类别管理</span></a>
+                <li><a href="./article_list.html" target="main_frame"><i
+                            class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
+                <li><a href="./article_edit.html" target="main_frame"><i
+                            class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
+                <li><a href="./article_category.html" target="main_frame"><i
+                            class="iconfont icon-previewright"></i><span>文章类别管理</span></a>
                 </li>
             </ul>
 
-            <div class="level01"><a href="#" target="main_frame"><i
+            <div class="level01"><a href="./comment_list.html" target="main_frame"><i
                         class="iconfont icon-comment"></i><span>评论管理</span></a></div>
-            <div class="level01" id="user"><a href="#" target="main_frame"><i
+            <div class="level01" id="user"><a href="./user.html" target="main_frame"><i
                         class="iconfont icon-user"></i><span>个人中心</span></a></div>
         </div>
         <!-- 顶部栏 -->
@@ -53,7 +56,7 @@
         </div>
         <!-- 右侧主体内容 -->
         <div class="main" id="main_body">
-
+            <iframe src="./main_count.html" frameborder="0" width="100%" height="100%" name="main_frame"></iframe>
         </div>
     </div>
     <script>
@@ -69,7 +72,7 @@
 
         */
 
-
+        //请求数据 渲染左边和顶部栏
         $(function () {
             $.ajax({
                 url: BigNew.user_info,
@@ -78,16 +81,43 @@
                 success: function (backData) {
                     if (backData.code == 200) {
                         $('.user_center_link>img').attr('src', backData.data.userPic)
-                        $('.user_center_link>span').text(backData.data.nickname)
+                        $('.user_info>span').text(backData.data.nickname)
                         $('.user_info>img').attr('src', backData.data.userPic)
                     }
                 }
             })
-            $('.logout').click(function(){
+            //点击退出登录
+            $('.logout').click(function () {
                 localStorage.removeItem('token');
-                window.location.href='./login.html'
+                window.location.href = './login.html'
             })
         })
+        //左边tab栏切换
+        $('.level01').click(function () {
+            //一级栏
+            $(this).addClass('active').siblings().removeClass('active');
+            //点击第二个栏  显示二级栏
+            if ($(this).index() == 1) {
+                //箭头向下旋转
+                $('.level01 b').toggleClass('rotate0')
+                $('.level02').slideToggle();
+                //默认触发第一个点击事件
+                $('.level02>li:eq(0) a')[0].click();
+            } else {
+                $('.level02>li').removeClass('active')
+            }
+
+        })
+        //二级栏tab栏切换高亮
+        $('.level02>li').click(function () {
+            $(this).addClass('active').siblings().removeClass('active');
+        })
+
+        //点击顶部个人中心时  左边需要显示高亮
+        $('.user_center_link a').click(function () {
+            $('#user').addClass('active').siblings().removeClass('active')
+        })
+
 
 
     </script>
