--- a/admin/article_list.html
+++ b/admin/article_list.html
@@ -13,6 +13,8 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎js文件 -->
     <script src="./libs/template-web.js"></script>
+    <!-- 分页插件 -->
+    <script src="./libs/jquery.twbsPagination.js"></script>
 </head>
 
 <body>
@@ -69,86 +71,123 @@
                 </tbody>
             </table>
             <div class="row text-center">
+                <ul id="pagination" class="pagination-sm"></ul>
             </div>
         </div>
     </div>
     <!-- 网络中间层 -->
     <script src="./libs/http.js"></script>
-    <!-- 文章类别下拉菜单 -->
-    <script id="category_list" type="text/html">
-            <option value="">所有分类</option>
-            {{each data v}}
-             <option value="{{v.id}}">{{v.name}}</option>
-            {{/each}}
-    </script>
-    <!-- 文章列表 -->
+    <!-- 页面表格模板 -->
     <script id="article_query" type="text/html">
-       {{each data.data v}}
-       <tr>
+    {{each data.data v}}
+    <tr>
         <td>{{v.title}}</td>
         <td>{{v.author}}</td>
         <td>{{v.category}}</td>
         <td class="text-center">{{v.date}}</td>
         <td class="text-center">{{v.state}}</td>
         <td class="text-center">
-            <a href="article_edit.html" class="btn btn-default btn-xs">编辑</a>
-            <a href="javascript:void(0);" class="btn btn-danger btn-xs delete">删除</a>
-        </td>
+            <a  href="article_edit.html?id={{v.id}}" class="btn btn-default btn-xs">编辑</a>
+            <a  data-id={{v.id}} href="javascript:void(0);" class="btn btn-danger btn-xs btn-delete">删除</a>
+        </td>  
     </tr>
-       {{/each}}
+    {{/each}}   
+    </script>
+    <!-- 上方文章类别模板 -->
+    <script id="category_list" type="text/html">
+        <option value=''>所有分类</option>
+        {{each data v}}
+        <option value={{v.id}}>{{v.name}}</option>
+        {{/each}}
     </script>
     <script>
-
-
-        /* 
-        请求地址：/admin/category/list
-
-        请求方式：get
-
-        请求参数：无
-
-        返回数据：文章
-
-        */
-
-
+        //获取上方文章类别
         $(function () {
-            //获取文章列表渲染页面  上方下拉菜单
             $.ajax({
                 url: BigNew.category_list,
                 type: 'get',
                 dataType: 'json',
                 success: function (backData) {
-                    $('#selCategory').html(template('category_list', backData))
+                    if (backData.code == 200) {
+                        $('#selCategory').html(template('category_list', backData))
+                    }
                 }
-            })
-            //查询文章列表
-
-            //筛选
+            });
+            //点击筛选按钮
             $('#btnSearch').click(function (e) {
-                e.preventDefault();//阻止表单默认跳转事件
+                e.preventDefault();
                 $.ajax({
                     url: BigNew.article_query,
                     type: 'get',
+                    dataType: 'json',
                     data: {
                         type: $('#selCategory').val(),
                         state: $('#selStatus').val(),
                         page: 1,
-                        perpage: ''
+                        perpage: 10
                     },
-                    dataType: 'json',
                     success: function (backData) {
-                        if (backData.code == 200) {
-                            $('.table>tbody').html(template('article_query', backData))
+                        console.log(backData);
+                        $('.table>tbody').html(template('article_query', backData));
+                        //(1)先销毁旧插件
+                        $('#pagination').twbsPagination('destroy');
+                        //分页插件初始化
+                        $('#pagination').twbsPagination({
+                            totalPages: backData.data.totalPage,//总页数
+                            startPage: 1,//起始页
+                            visiblePages: 7,//可见页数
+                            first: '首页',
+                            last: '尾页',
+                            prev: '上一页',
+                            next: '下一页',
+                            onPageClick: function (event, page) {//页码点击事件
+                                $('#page-content').text('Page ' + page);
+                                getArticleList(page);
+                            }
+                        });
+                    }
+                });
+            })
+            $('#btnSearch').click();//默认触发第一个点击事件
+
+            /**
+            * @description:
+            * @param {type} 
+            * @return: 
+            */
+            function getArticleList(currentPage) {
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        type: $('#selCategory').val(),
+                        state: $('#selStatus').val(),
+                        page: currentPage,
+                        perpage: 10
+                    },
+                    success: function (backData) {
+                        $('.table>tbody').html(template('article_query', backData));
+                    }
+                });
+            }
+            //删除按钮点击事件
+            $('.table>tbody').on('click', '.btn-delete', function () {
+                var id = $(this).attr('data-id')
+                $.ajax({
+                    url: BigNew.article_delete,
+                    type: 'post',
+                    dataType: 'json',
+                    data: { id: id },
+                    success: function (backData) {
+                        if (backData.code == 204) {
+                            alert(backData.msg);//提示删除成功
+                            window.location.reload();//刷新页面
                         }
                     }
-                })
+                });
             })
-            //页面加载，触发第一个下拉菜单事件
-            $('#btnSearch').click();
         })
-
-
     </script>
 </body>
 
