--- a/admin/article_edit.html
+++ b/admin/article_edit.html
@@ -14,6 +14,12 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 模板引擎 -->
     <script src="./libs/template-web.js"></script>
+    <!-- 文本框 -->
+    <script src="./libs/wangEditor.min.js"></script>
+    <!-- 日期插件 -->
+    <link rel="stylesheet" href="./libs/jedate-6.5.0/test/jeDate-test.css">
+    <link rel="stylesheet" href="./libs/jedate-6.5.0/skin/jedate.css">
+    <script src="./libs/jedate-6.5.0/src/jedate.js"></script>
 </head>
 
 <body>
@@ -51,11 +57,22 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeinpbox">
+                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
+                            <div class="icons jebtns" onclick="jeDate('#testico',{trigger:false,format: 'YYYY-MM-DD',isTime: false,
+                            isinitVal: true,
+                            festival: true,
+                            zIndex: 10001,
+                            })">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <div id="editor">
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -67,6 +84,98 @@
             </form>
         </div>
     </div>
+    <script src="./libs/http.js"></script>
+    <script id="category_list" type="text/html">
+       {{each data v}}
+       <option value="{{v.id}}">{{v.name}}</option>
+       {{/each}}
+    </script>
+    <script>
+        $(function () {
+            //日期插件初始化
+            jeDate("#testico", {
+                format: "YYYY-MM-DD",
+                isTime: false,
+                isinitVal: true,
+                festival: true,
+                zIndex: 10001,
+            })
+            //文本插件初始化
+            var E = window.wangEditor
+            var editor = new E('#editor')
+            // 或者 var editor = new E( document.getElementById('editor') )
+            editor.create()
+
+
+
+            //获取当前点击的id
+            var id = window.location.href.split('=')[1];
+            //渲染分类下拉菜单
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        $('.category').html(template('category_list', backData))
+                    }
+                }
+            });
+            //渲染当前页面所有内容
+            $.ajax({
+                url: BigNew.article_search,
+                type: 'get',
+                dataType: 'json',
+                data: { id: id },
+                success: function (backData) {
+                   if(backData.code==200){
+                       $('#inputTitle').val(backData.data.title)//标题
+                       $('.article_cover').attr('src',backData.data.cover);//封面
+                       $('#testico').val(backData.data.date)//日期
+                       $('.category').val(backData.data.categoryId)//下拉菜单id
+                       editor.txt.html(backData.data.content)//设置内容
+                   }
+                }
+            });
+            //文件预览
+            //1.给file表单元素注册onchange事件
+            $('#inputCover').change(function () {
+                //1.2 获取用户选择的图片
+                var file = this.files[0];
+                //1.3 将文件转为src路径
+                var url = URL.createObjectURL(file);
+                //1.4 将url路径赋值给img标签的src
+                $('.article_cover').attr('src', url);
+            });
+            //文件上传
+            $('.btn-edit,.btn-draft').on('click',function(e){
+                var state = $(this).hasClass('btn-edit')?'已发布':'草稿'
+                //禁用表单默认提交事件
+                e.preventDefault();
+                //创建FormData对象：参数是表单dom对象
+                var fd = new FormData($('form')[0]);
+                fd.append('id',id);
+                fd.append('date',$('#testico').val());
+                fd.append('content',editor.txt.text());
+                fd.append('state',state);
+
+                $.ajax({
+                    url:BigNew.article_edit,
+                    type:'post',
+                    dataType:'json',
+                    data:fd,
+                    contentType: false,
+                    processData: false,
+                    success: function(backData){
+                        if(backData.code==200){
+                            alert(backData.msg);
+                            window.location.href='./article_list.html'
+                        }
+                    }
+                });
+            });
+        })
+    </script>
 </body>
 
 </html>
