--- a/admin/login.html
+++ b/admin/login.html
@@ -57,6 +57,8 @@
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
+  <!-- 网络中间层 -->
+  <script src="./libs/http.js"></script>
   <script>
     /* 登录功能思路
    1.给登录按钮注册点击事件
@@ -68,54 +70,35 @@
     */
     $(function () {
       $('.input_sub').click(function (e) {
-        e.preventDefault();//阻止表单默认跳转
-        var username = $('.input_txt').val();//获取输入账号名和密码
+        e.preventDefault();//阻止表单默认跳转行为
+        var username = $('.input_txt').val();
         var password = $('.input_pass').val();
+        /* 非空判断 */
         if (username.length == 0 || password.length == 0) {
-          $('.modal-body>p').text('用户名和密码不能为空');
-          $('#myModal').modal({//弹出模态框
-            keyboard: false
-          })
+          alert('用户名和密码不能为空！');
+          return;
         }
-
         $.ajax({
+          type: "post",
           url: BigNew.user_login,
-          type: 'post',
           data: {
             username: username,
             password: password
           },
-          dataType: 'json',
+          dataType: "json",
           success: function (backData) {
             localStorage.setItem('token',backData.token)
             if (backData.code == 200) {
-              localStorage.getItem('token', backData.token)
-              $('.modal-body>p').text('登录成功！');
-              $('#myModal').modal({//弹出模态框
-                keyboard: false
-              })
-              $('#myModal').on('hidden.bs.modal', function (e) {
-                window.location.href = './index.html'
-              })
-            } else {
-              $('.modal-body>p').text('用户名或密码错误！');
-              $('#myModal').modal({//弹出模态框
-                keyboard: false
-              })
+              alert(backData.msg)
+              window.location.href='./index.html'
             }
           }
-        })
+        });
       })
+
     })
 
-    /*
-请求地址：/admin/user/login
 
-请求方式：post
-
-请求参数
-
-*/
 
 
 
