--- a/admin/article_edit.html
+++ b/admin/article_edit.html
@@ -14,6 +14,13 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 模板引擎 -->
     <script src="./libs/template-web.js"></script>
+    <!-- 日期插件 -->
+    <link rel="stylesheet" href="./libs/jedate/css/jeDate-test.css">
+    <link rel="stylesheet" href="./libs/jedate/css/jedate.css">
+    <script src="./libs/jedate/js/jedate.js"></script>
+    <!-- 文本插件 -->
+    <script src="./libs/wangEditor.min.js"></script>
+    <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -43,7 +50,7 @@
                             <option>类别一</option>
                             <option>类别二</option>
                             <option>类别三</option>
-                            <option selected>类别四</option>
+                            <option>类别四</option>
                             <option>类别五</option>
                         </select>
                     </div>
@@ -51,11 +58,21 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeinpbox">
+                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
+                            <div class="icons jebtns" onclick="jeDate('#testico',{trigger:false,format: 'YYYY-MM-DD',zIndex:10001, isTime: false,
+                            isinitVal:true,
+                            festival:true,})">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <div id="editor">
+
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -67,6 +84,91 @@
             </form>
         </div>
     </div>
+    <script id="category_list" type="text/html">
+     {{each data v}}
+     <option value={{v.id}}>{{v.name}}</option>
+     {{/each}}
+    </script>
+    <script>
+        $(function () {
+            //获取当前ID
+            var id = window.location.href.split('=')[1];
+            //console.log(id);
+            //日期插件初始化
+            jeDate("#testico", {
+                format: "YYYY-MM-DD",
+                isTime: false,
+                isinitVal: true,
+                festival: true,
+                zIndex: 10001,
+            })
+            //文本插件初始化
+            var E = window.wangEditor
+            var editor = new E('#editor')
+            // 或者 var editor = new E( document.getElementById('editor') )
+            editor.create()
+            //发送ajax 渲染category下拉菜单
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    $('.category').html(template('category_list', backData))
+                }
+            });
+            //根据当前id获取当前数据
+            $.ajax({
+                url: BigNew.article_search,
+                type: 'get',
+                dataType: 'json',
+                data: { id: id },
+                success: function (backData) {
+                      console.log(backData);
+                    $('#inputTitle').val(backData.data.title);//标题
+                    $('.article_cover').attr('src', backData.data.cover)//头像
+                    $('.category').val(backData.data.categoryId)//下拉菜单
+                    $('.jeinput').val(backData.data.date)//日期
+                    editor.txt.html(backData.data.content)//内容
+                }
+            });
+            //文件预览
+            //1.给file表单元素注册onchange事件
+            $('#inputCover').change(function () {
+                //1.2 获取用户选择的图片
+                var file = this.files[0];
+                //1.3 将文件转为src路径
+                var url = URL.createObjectURL(file);
+                //1.4 将url路径赋值给img标签的src
+                $('.article_cover').attr('src', url);
+            });
+            //文件上传
+            $('.btn-edit,.btn-draft').on('click', function (e) {
+                //禁用表单默认提交事件
+                e.preventDefault();
+                var state = $(this).hasClass('btn-edit') ? '已发布' : '草稿';
+                //创建FormData对象：参数是表单dom对象
+                var fd = new FormData($('form')[0]);
+                fd.append('id', id);
+                fd.append('date', $('.jeinput').val());
+                fd.append('content', editor.txt.html());
+                fd.append('state', state);
+                $.ajax({
+                    url: BigNew.article_edit,
+                    type: 'post',
+                    dataType: 'json',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        if (backData.code == 200) {
+                            alert('修改成功！');
+                            window.location.reload();
+                        }
+                    }
+                });
+            });
+        })
+    </script>
 </body>
 
 </html>
