--- a/admin/article_list.html
+++ b/admin/article_list.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="./css/iconfont.css">
     <link rel="stylesheet" href="./css/main.css">
     <script src="./libs/jquery-1.12.4.min.js"></script>
+    <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
     <!-- 引入模板引擎js文件 -->
     <script src="./libs/template-web.js"></script>
+    <!-- 分页插件 -->
+    <script src="./libs/jquery.twbsPagination.js"></script>
 </head>
 
 <body>
@@ -69,6 +72,8 @@
                 </tbody>
             </table>
             <div class="row text-center">
+                <!-- 分页插件html结构 -->
+                <ul id="pagination" class="pagination-sm"></ul>
             </div>
         </div>
     </div>
@@ -76,7 +81,7 @@
     <script src="./libs/http.js"></script>
     <!-- 文章类别下拉菜单 -->
     <script id="category_list" type="text/html">
-            <option value="">所有分类</option>
+            <option value=''>所有分类</option>
             {{each data v}}
              <option value="{{v.id}}">{{v.name}}</option>
             {{/each}}
@@ -91,8 +96,8 @@
         <td class="text-center">{{v.date}}</td>
         <td class="text-center">{{v.state}}</td>
         <td class="text-center">
-            <a href="article_edit.html" class="btn btn-default btn-xs">编辑</a>
-            <a href="javascript:void(0);" class="btn btn-danger btn-xs delete">删除</a>
+            <a href="article_edit.html?id={{v.id}}" class="btn btn-default btn-xs">编辑</a>
+            <a data-id={{v.id}} href="javascript:void(0);" class="btn btn-danger btn-xs btn-delete">删除</a>
         </td>
     </tr>
        {{/each}}
@@ -119,6 +124,7 @@
                 type: 'get',
                 dataType: 'json',
                 success: function (backData) {
+                    // console.log(backData);
                     $('#selCategory').html(template('category_list', backData))
                 }
             })
@@ -134,18 +140,50 @@
                         type: $('#selCategory').val(),
                         state: $('#selStatus').val(),
                         page: 1,
-                        perpage: ''
+                        perpage: 10
                     },
                     dataType: 'json',
                     success: function (backData) {
-                        if (backData.code == 200) {
-                            $('.table>tbody').html(template('article_query', backData))
-                        }
+                        //点击后渲染页面
+                        $('.table>tbody').html(template('article_query', backData))
+                        //清楚旧的分页插件
+                        $('#pagination').twbsPagination('destroy');
+                        //加载分页插件
+                        $('#pagination').twbsPagination({
+                            totalPages: backData.data.totalPage,//总页数
+                            visiblePages: 10,//可见页数
+                            startPage: 1,
+                            first: '首页',
+                            last: '尾页',
+                            prev: '上一页',
+                            next: '下一页',
+                            onPageClick: function (event, page) {
+                                $('#page-content').text('Page ' + page);
+                                getArticleList(page);
+                            }
+                        });
                     }
                 })
             })
             //页面加载，触发第一个下拉菜单事件
             $('#btnSearch').click();
+            //点击分页 请求ajax加载数据
+            function getArticleList(currentPage) {
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        type: $('#selCategory').val(),
+                        state: $('#selStatus').val(),
+                        page: currentPage,
+                        perpage: 10,
+                    },
+                    success: function (backData) {
+                        $('.table>tbody').html(template('article_query', backData))
+                    }
+                });
+            }
         })
 
 
